fix: Fix overflow on scene selector

--- a/src/renderer/components/SceneSelector/style.module.css
+++ b/src/renderer/components/SceneSelector/style.module.css
@@ -19,6 +19,7 @@
     justify-content: center;
     width: 100%;
     height: 40px;
+    overflow: hidden;
 }
 
 .button:hover:not(:disabled) {
